--- a/apps/products/templates/products/create.html
+++ b/apps/products/templates/products/create.html
@@ -5,13 +5,18 @@
 <body>
 	<h1>Add A New Product</h1>
 
-	<form action="" method="post"> {% csrf_token %}
+	{% if errors %}
+		{% for error in errors %}
+			<p style="color: red">{{error}}</p>
+		{% endfor %}
+	{% endif %}
+	<form action="{% url 'create' %}" method="post"> {% csrf_token %}
 		<p>Name</p>
 		<input type="text" name="name">
 		<p>Description </p>
 		<input type="text" name="description">
 		<p>Price</p>
-		<input type="number" step="0.01" min='0'>
+		<input type="number" name="price" step="0.01" min='0'>
 		<br>
 		<br>
 		<input type="submit" value="Create">
