--- a/apps/products/templates/products/index.html
+++ b/apps/products/templates/products/index.html
@@ -1,11 +1,43 @@
 <html>
 <head>
 	<title>Products</title>
+	<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 </head>
 <body>
+
 	<h1>Products</h1>
-
-
 	<a href="{% url 'new' %}">Add a new Product</a>
+	<br>
+	<br>
+	{% if products%}
+	<table class="table table-hover">
+		<thead>
+			<tr>
+				<th>Name</th>
+				<th>Description</th>
+				<th>Price</th>
+				<th>Action</th>
+			</tr>
+		</thead>
+		<tbody>
+			{% for product in products %}
+				<tr>
+					<td>{{product.name}}</td>
+					<td>{{product.description}}</td>
+					<td>$ {{product.price}}</td>
+					<td><a href="{% url 'product' product_id=product.id %}">Show</a> | <a href="{% url 'edit' product_id=product.id %}">Edit</a> | <a href="{% url 'remove' product_id=product.id %}">Remove</a></td>
+				</tr>
+			{% endfor %}
+		</tbody>
+
+	</table>
+	{% endif %}
 </body>
 </html>
